# MiniFTracer

./: .gitignore  CMakeLists.txt  README.org
ftrace/: CMakeLists.txt
ftrace/include/: syscall.h
ftrace/scripts/: generate_sys_tables.py  output_2  sync_sys_tables.py
ftrace/src/: crawler.c  main.c  signal.c  syscall.c
libtrace/: CMakeLists.txt
libtrace/export/: libtrace.h
libtrace/include/: ftrace.h
libtrace/src/: fork.c  ftrace.c  loop.c
tests/: call_ind.asm  call_rel.asm  signals.c
tests/syscalls/: glibc.c  interrupt.asm  syscall.asm
